# kalshi-weather

./: Dockerfile  Procfile  nixpacks.toml  pyproject.toml  requirements.txt
src/kalshi_weather/: cli.py  config.py  pipeline.py
src/kalshi_weather/calibration/: __init__.py  nws_history.py  openmeteo_history.py  station_bias.py
src/kalshi_weather/common/: http.py  llm.py
src/kalshi_weather/data/: station_biases.json
src/kalshi_weather/forecasting/: base.py  hurricane.py  precipitation.py  registry.py  temperature.py
src/kalshi_weather/markets/: classifier.py  client.py  models.py  parser.py
src/kalshi_weather/notifications/: telegram.py
src/kalshi_weather/signals/: analyzer.py  formatters.py  models.py  resolver.py  tracker.py
src/kalshi_weather/weather/: geocoding.py  noaa.py  openmeteo.py  stations.py  wunderground.py
tests/: conftest.py  test_analyzer.py  test_calibration.py  test_classifier.py  test_cli.py  test_formatters.py  test_geocoding.py  test_hurricane.py  test_markets_client.py  test_noaa.py  test_nws_history.py  test_openmeteo.py  test_parser.py  test_pipeline.py  test_precipitation.py  test_resolver.py  test_station_bias.py  test_telegram.py  test_temperature.py  test_tracker.py  test_wunderground.py
