[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kalshi-weather"
version = "0.1.0"
description = "Kalshi weather prediction market signal generator"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "anthropic>=0.40",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.1",
    "geopy[aiohttp]>=2.4",
    "tenacity>=8.2",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
]

[project.scripts]
kalshi-weather = "kalshi_weather.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/kalshi_weather"]
